# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  Trunk.toml  deny.toml  dev.sh  docker-compose.yml  generate-htpasswd.sh  index.html  otel-collector-config.yml  prometheus.yml  spec.yaml  sqlx-data.json  tailwind.config.js  tailwind.css
.cargo/: config.toml
.sqlx/: query-067e761ffb4e9d27a3c89ad017124f9586f2c0e16f1da668c257defba8cfc50c.json  query-096600589b719b456e5f7d73f3d9b32ea7765d6fce7336d6e0a66e347221f8e0.json  query-1a1ca6981708cb9e6383e0c10d175bcf505845849ff86ac90b05aa05b168d754.json  query-2795226195ba860bcc3bfbe0bda87eaf01dccabdedbd9cc84c8b3b1b1b411567.json  query-2e3a7df58735c2bd55c2ac049d292650c2333ad54add4000d423bb34ae46c177.json  query-3685f3dfc6ebdf392b3ef93c6e53463a491c6f62697d176f0fc166a9bb17ad25.json  query-45794f9835b0a639a1e9e688f5fea60309d5b1e0e6dd87f9792ae8ff47997c38.json  query-4d2794224f9f19ebc71d7e3f8c893f0b60c43fe049225ba2854c9d93d865f352.json  query-514ba39ddbfd054eb2a57d7ae9f1643066dce861543aed2b8f88628c60da9296.json  query-6f57319211afc15529b93858841d7ff3d31c6b8ad9b8a16eb5f48a17418d4145.json  query-7196bf11c9311399eb7c1f0540c3cb35e7ba5fe2f68f0ead38012861f5d165ac.json  query-77caa9380476a1f3d9991fd65a9022f8f79450126ec1a2da1a6dc19859e17370.json  query-8f7a7c3d0a038751a88723e3f8d6097f8c1d136a3f197208dbc6d2c726f17232.json  query-943dbf502553a2c41fbf91bc807d5df7940ac0d1da85cb2db2dc4901020f8a49.json  query-aa22a5da9467ecae0bc098c293754e2366442e6fb093a79691ec56a61763aaf5.json  query-ad8263c27958c7358409af76f9dca9eaaccf80566b396718ea8a257038049f6c.json  query-b2a611c60f4eaf89a19ca8f690c7a1acac8e74290764fb63b4a33aca2178f93a.json  query-c231594c46aa5d41b29f827c9570d51b14b7f263472f271b17a2e6166ca53297.json  query-cb4321eaccf92cad0868442f71a0be3da11f355881a2c3f23cc078a48d16a70e.json  query-ccad5ae6837effa988515c12dfcf1e7e1dec3fc284db51d6bbfddea7df07287d.json  query-dfdb2022a9528ba0d51bd01e89ea0c2c1ca26d549ef62d8266460426a9a5111f.json  query-ef4df6aedbada7d5bafe593bdee12388f3e8e80939d73b3a20a268c65c1e07b5.json
common/: Cargo.toml  README.md
common/src/: config.rs  err_context.rs  lib.rs  postgres.rs  settings.rs  tracing.rs
common/src/config/: error.rs  mod.rs
common/tests/resources/config/service/: dev.toml
css/: main.css
docker/: stack.yml
documentation/: CI.md  architecture-for-testing.md  cucumber.md  deployment.md  error-handling.md  webserver.md  xtasks.md
migrations/: 20230602111214_create_subscriptions_table.sql
scripts/: init_db.sh
services/zero2prod-backend/: Cargo.toml
services/zero2prod-backend/docker/: Dockerfile
services/zero2prod-backend/migrations/: 20230627124014_add_status_to_subscriptions.sql  20230628065550_make_status_not_null_in_subscriptions.sql  20230628082248_create_subscription_tokens_table.sql  20230719155151_create_users_table.sql  20230810091142_add_email_to_users_table.sql
services/zero2prod-backend/pages/: 404.html
services/zero2prod-backend/src/: application.rs  email_service.rs  email_service_impl.rs  err_context.rs  error.rs  lib.rs  listener.rs  main.rs  opts.rs  postgres.rs  server.rs  storage.rs  telemetry.rs
services/zero2prod-backend/src/application/: error.rs  listener.rs  mod.rs  redirect.rs
services/zero2prod-backend/src/application/opts/: cli.rs  error.rs  mod.rs
services/zero2prod-backend/src/application/server/: cookies.rs  error.rs  mod.rs
services/zero2prod-backend/src/application/server/context/: error.rs  mod.rs
services/zero2prod-backend/src/application/server/middleware/: mod.rs
services/zero2prod-backend/src/application/server/middleware/resolve_context/: error.rs  mod.rs
services/zero2prod-backend/src/application/server/middleware/response_map/: mod.rs
services/zero2prod-backend/src/application/server/routes/: error.rs  health.rs  login.rs  logout.rs  mod.rs  newsletter.rs  register.rs  static_dir.rs  subscription_confirmation.rs  subscriptions.rs
services/zero2prod-backend/src/authentication/: basic.rs  jwt.rs  mod.rs  password.rs
services/zero2prod-backend/src/domain/: confirmed_subscriber.rs  email.rs  mod.rs  new_subscription.rs  subscriber_email.rs  subscriber_name.rs  subscription.rs  user_credentials.rs
services/zero2prod-backend/src/domain/ports/secondary/: authentication_storage.rs  email_service.rs  mod.rs  subscription_storage.rs
services/zero2prod-backend/src/opts/: cli.rs
services/zero2prod-backend/src/routes/: authenticate.rs  login.rs  logout.rs  mod.rs  newsletter.rs  register.rs  subscription_confirmation.rs  subscriptions.rs
services/zero2prod-backend/src/services/: email.rs  mod.rs  postgres.rs
services/zero2prod-backend/src/services/postgres/: authentication.rs  error.rs  mod.rs  subscription.rs
services/zero2prod-backend/src/utils/: telemetry.rs  tracing.rs
services/zero2prod-backend/tests/: integration.rs  state.rs
services/zero2prod-backend/tests/backup/: subscription.feature
services/zero2prod-backend/tests/features/: authentication.feature  health.feature  integration.feature
services/zero2prod-backend/tests/resources/config/service/: prod.toml
services/zero2prod-backend/tests/steps/: authentication.rs  confirmation.rs  health.rs  mod.rs  notification.rs  response.rs  storage.rs  subscription.rs
services/zero2prod-common/: Cargo.toml
services/zero2prod-common/src/: README.md  lib.rs  login.rs  subscriptions.rs
services/zero2prod-fakeemail/: Cargo.toml
services/zero2prod-fakeemail/src/: main.rs
services/zero2prod-frontend/crate/: Cargo.toml
services/zero2prod-frontend/crate/src/: app.rs  main.rs
services/zero2prod-frontend/crate/src/components/: backend.rs  confirmation.rs  login.rs  mod.rs  subscription.rs
services/zero2prod-frontend/crate/src/pages/: home.rs  mod.rs  page_not_found.rs  subscription.rs  terms_and_conditions.rs
src/: config.rs  database.rs  error.rs  error_template.rs  lib.rs  main.rs  postgres.rs  routes.rs  server.rs  settings.rs  storage.rs  telemetry.rs
tests/: health_check.rs  integration.rs  login.sh  rate-limit.sh  state.rs  (+1 more)
(+156 files in other folders)
