[package]
name = "zero2prod"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "Testing Zero 2 Prod"
keywords = [ "API" ]
categories = [ "web" ]
repository = "https://github.com/crocme10/zero2prod"
authors = [
  "Matthieu Paindavoine <matthieu@area403.io>"
]


[dependencies]
axum = { version = "^0.6.18", features = [ "headers", "ws" ] }
axum-extra = "^0.7.4"
axum-macros = "^0.3.7"
clap = { version = "^4.3.0", features = [ "derive" ] }
config = "^0.13.3"
futures = "^0.3.28"
serde = { version = "^1.0.163", features = [ "derive" ] }
serde_json = "^1.0.96"
tokio = { version = "^1.28.2", features = ["macros", "rt-multi-thread" ] }
tower = "^0.4.13"
tracing = "^0.1.37"
tracing-appender = "^0.2.2"
tracing-attributes = "^0.1.24"
tracing-futures = "^0.2.5"
tracing-subscriber = { version = "^0.3.17" }

[dev-dependencies]
scopeguard = "^1.1.0"
serial_test = "^2.0.0"
cucumber = { version = "^0.19.1", features = ["libtest", "macros"]}
reqwest = { version = "^0.11.18", features = [ "json"] }

[lib]
name = "zero2prod"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[[test]]
name = "health_check" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
