[package]
name = "zero2prod"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "Testing Zero 2 Prod"
keywords = [ "API" ]
categories = [ "web" ]
repository = "https://github.com/crocme10/zero2prod"
authors = [
  "Matthieu Paindavoine <matthieu@area403.io>"
]


[dependencies]
async-trait =  "0.1"
axum = { version = "^0.6.18", features = [ "headers", "ws", "macros" ] }
axum-extra = "^0.7.4"
axum-macros = "^0.3.7"
chrono = { version = "^0.4.26", features = [ "serde" ] }
clap = { version = "^4.3.0", features = [ "derive" ] }
config = "^0.13.3"
futures = "^0.3.28"
hyper = "^0.14.26"
serde = { version = "^1.0.163", features = [ "derive" ] }
serde_json = "^1.0.96"
sqlx = { version = "^0.6.3", default-features= false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "^1.28.2", features = ["macros", "rt-multi-thread", "rt", "sync", "signal", "time" ] }
tower = "^0.4.13"
tracing = "^0.1.37"
tracing-appender = "^0.2.2"
tracing-attributes = "^0.1.24"
tracing-futures = "^0.2.5"
tracing-subscriber = { version = "^0.3.17" }
uuid = { version = "^1.3.3", features = ["serde", "v4" ] }

[dev-dependencies]
scopeguard = "^1.1.0"
serial_test = "^2.0.0"
# For cucumber, using branch main to enable tracing
cucumber = { git = "https://github.com/cucumber-rs/cucumber.git", branch = "main", features = ["macros", "tracing"]}
reqwest = { version = "^0.11.18", features = [ "json"] }

[lib]
name = "zero2prod"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[[test]]
name = "integration" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
