[package]
name = "zero2prod-common"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Testing Zero 2 Prod"
keywords = [ "API" ]
categories = [ "web" ]
repository = "https://github.com/crocme10/zero2prod"
authors = [
  "Matthieu Paindavoine <matthieu@area403.io>"
]


[dependencies]
async-trait =  "^0.1.68"
chrono = { version = "^0.4.26", features = [ "serde" ] }
clap = { version = "^4.3.4", features = [ "derive" ] }
config = "^0.13.3"
serde = { version = "^1.0.164", features = [ "derive" ] }
serde-aux = "^4.2.0"
serde_json = "^1.0.97"
sqlx = { version = "^0.6.3", default-features= false, features = [
    "postgres",
    "runtime-actix-rustls",
  ] }
tracing = "^0.1.37"
tracing-attributes = "^0.1.24"
tracing-bunyan-formatter = "^0.3.7"
tracing-futures = "^0.2.5"
tracing-log = "^0.1.3"
tracing-subscriber = { version = "^0.3.17", features = [ "env-filter" ] }
uuid = { version = "^1.3.4", features = ["serde", "v4" ] }

[dev-dependencies]
scopeguard = "^1.1.0"
serial_test = "^2.0.0"
