[package]
name = "common"
version = "0.0.6"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Testing Zero 2 Prod"
keywords = [ "API" ]
categories = [ "web" ]
repository = "https://github.com/crocme10/zero2prod"
authors = [
  "Matthieu Paindavoine <matthieu@area403.io>"
]


[dependencies]
async-trait =  "^0.1.73"
chrono = { version = "^0.4.26", features = [ "serde" ] }
clap = { version = "^4.3.23", features = [ "derive" ] }
config = "^0.13.3"
opentelemetry         = { version = "^0.20.0", default-features = false, features = [ "rt-tokio" ] }
# opentelemetry-otlp    = { version = "^0.13.0", default-features = false, features = [ "trace", "http-proto", "reqwest-client" ] }
opentelemetry-jaeger    = { version = "^0.19.0", default-features = false, features = [ "full" ] }
serde = { version = "^1.0.185", features = [ "derive" ] }
serde-aux = "^4.2.0"
serde_json = "^1.0.105"
serde_with = "^3.3.0"
sqlx = { version = "^0.7.1", default-features= false, features = [
    "postgres",
    "runtime-tokio-rustls",
  ] }
tokio = { version = "^1.32.0", features = [ "rt" ] }
tracing = "^0.1.37"
tracing-attributes = "^0.1.26"
tracing-opentelemetry = { version = "^0.21.0", default-features = false }
tracing-futures = "^0.2.5"
tracing-log = "^0.1.3"
tracing-subscriber = { version = "^0.3.17", features = [ "env-filter", "json", "fmt" ] }
uuid = { version = "^1.4.1", features = ["serde", "v4" ] }

[dev-dependencies]
scopeguard = "^1.2.0"
serial_test = "^2.0.0"
