[package]

name = "zero2prod-backend"
version = "0.0.6"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Testing Zero 2 Prod"
keywords = [ "API" ]
categories = [ "web" ]
repository = "https://github.com/crocme10/zero2prod"
authors = [
  "Matthieu Paindavoine <matthieu@area403.io>"
]


[dependencies]
async-trait =  "^0.1.73"
axum = { version = "^0.6.20", features = [ "headers", "ws", "macros" ] }
axum-extra = { version = "0.7.7" }
axum-macros = "^0.3.8"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
base64 = "^0.21.2"
chrono = { version = "^0.4.26", features = [ "serde" ] }
clap = { version = "^4.3.23", features = [ "derive" ] }
config = "^0.13.3"
fake = { version = "^2.8.0", features = [ "derive" ] }
hyper = "^0.14.27"
jsonwebtoken = "8.3.0"
opentelemetry         = { version = "^0.20.0", default-features = false, features = [ "rt-tokio" ] }
opentelemetry-http    = { version = "^0.9.0", features = [ "reqwest" ] }
opentelemetry-otlp    = { version = "^0.13.0", default-features = false, features = [ "trace", "http-proto" ] }
passwords = { version = "3.1.13", features = [ "common-password"] }
rand = { version = "^0.8.5", features = [ "std_rng" ] }
reqwest = { version = "^0.11.19", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "^0.8.0"
serde = { version = "^1.0.185", features = [ "derive" ] }
serde_json = "^1.0.105"
serde_with = "^3.3.0"
argon2 = { version = "^0.5.1", features = ["std"] }
sqlx = { version = "^0.7.1", default-features= false, features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "uuid",
    "runtime-tokio-rustls"
  ] }
time = "0.3.27" 
tokio = { version = "^1.32.0", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "sync",
    "signal",
    "time"
  ] }
tower = { version = "^0.4.13", features = ["limit", "buffer"] }
tower-http = { version = "^0.4.3", features = ["trace", "fs", "cors"] }
tower-cookies = { version = "^0.9.0" }
tracing = "^0.1.37"
tracing-attributes = "^0.1.26"
tracing-opentelemetry = { version = "^0.21.0", default-features = false }
tracing-futures = "^0.2.5"
tracing-log = "^0.1.3"
tracing-subscriber = { version = "^0.3.17", features = [ "env-filter", "json", "fmt" ] }
unicode-segmentation = "^1.10.1"
uuid = { version = "^1.4.1", features = ["serde", "v4" ] }
validator = "^0.16.1"
common = { path = "../../common" }

[dev-dependencies]
# For cucumber, using branch main to enable tracing
cucumber = { git = "https://github.com/cucumber-rs/cucumber.git", branch = "main", features = ["macros", "tracing"]}
futures = "^0.3.28"
linkify = "^0.10.0"
quickcheck = "^1.0.3"
quickcheck_macros = "^1.0.0"
reqwest = { version = "^0.11.19", features = [ "json"] }
scopeguard = "^1.2.0"
serial_test = "^2.0.0"
speculoos = "^0.11.0"
mockall = "^0.11.4"
wiremock = "^0.5.19"
once_cell = "^1.18.0"

[lib]
name = "zero2prod"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[[test]]
name = "integration"
harness = false  # allows Cucumber to print output instead of libtest
