[package]
name = "zero2prod-common"
version = "0.0.3"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Testing Zero 2 Prod"
keywords = [ "API" ]
categories = [ "web" ]
repository = "https://github.com/crocme10/zero2prod"
authors = [
  "Matthieu Paindavoine <matthieu@area403.io>"
]


[dependencies]
serde = { version = "^1.0.166", features = [ "derive" ] }
serde_json = "^1.0.100"
uuid = { version = "^1.4.0", features = ["serde", "v4", "js" ] }
