[package]
name = "zero2prod-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "^0.3.0"
gloo = "^0.8.1"
console_error_panic_hook = "^0.1.7"
yew = { version = "^0.20.0", features = ["csr"] }
yew-router = "^0.17.0"
wasm-bindgen = { version = "^0.2.87" }
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "^0.3.64", features = [ "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window" ] }
serde = { version = "^1.0.171", features = ["derive"] }
serde-wasm-bindgen = "^0.5.0"
zero2prod-common = { path = "../../zero2prod-common" }
